module(
  name = "google_jsonnet_go",
  version = "0.0.0-v0.19.1",
  repo_name = "google_jsonnet_go",
  compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.38.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.29.0", repo_name = "bazel_gazelle")
bazel_dep(name = "cpp_jsonnet", version = "0.0.0-0.19.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_sergi_go_diff",
    "io_k8s_sigs_yaml",
    "com_github_fatih_color",
)
